# Akari2_0

./: CMakeLists.txt  celda.cpp  celda.h  color.h  listaPartidas.cpp  listaPartidas.h  listaPosiciones.cpp  listaPosiciones.h  main.cpp  partida.cpp  partida.h  posicion.cpp  posicion.h  reglasJuego.cpp  reglasJuego.h  tablero.cpp  tablero.h
